Meresponsivekan halaman artikel dan fitur section

--- a/index.html
+++ b/index.html
@@ -141,131 +141,77 @@
         </section>
 
 
-        <!-- <section class="hero bg-white">
+        <section class="containerGaleri pt-50 pb-50">
             <div class="container">
-                <div class="caption">
-                    <h1 class="text-dark title-tentangKami">Tentang Kami</h1>
-                    <p class="text-dark">
-                        HMJ MI merupakan sebuah organisasi kemahasiswaan di STMIK AKAKOM yang beranggotakan mahasiswa
-                        jurusan manajemen Informatika. HMJ MI bertujuan untuk menghimpun dan mewadahi mahasiswa jurusan
-                        Manajemen Informatika STMIK AKAKOM yang dalam menyalurkan aspirasi dan mengkoordinasikan
-                        kegiatan mahasiswa Manajemen Informatika serta menjaga nama baik almamater STMIK AKAKOM
-                        Yogyakarta. HMJ MI didirikan di STMIK AKAKOM Yogyakarta pada tanggal 10 Juli 2005.
-                    </p>
-                </div>
-                <div class="img">
-                    <img src="img/about.svg" alt="img about">
-                </div>
-            </div>
-        </section> -->
-
-        <section class="containerArtikelHome pt-50">
-            <div class="container">
-                <div class="title">
+                <div class="title pb-50">
                     <h1>Update Tentang Kami</h1>
                     <p>
                         Dapatkan semua informasi terbaru dari kami melalui artikel dan galeri yang sudah kami siapkan
                     </p>
                 </div>
 
-                <div class="artikelHome pt-50">
-                    <a href="perArtikel.html" class="perArtikel">
-                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
-                        <div class="keterangan">
-                            <div class="icon">
-                                <i class="fas fa-user"></i>
-                            </div>
-                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
-                        </div>
-                    </a>
-
-                    <a href="perArtikel.html" class="perArtikel">
-                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
-                        <div class="keterangan">
-                            <div class="icon">
-                                <i class="fas fa-user"></i>
-                            </div>
-                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
-                        </div>
-                    </a>
-
-                    <a href="perArtikel.html" class="perArtikel">
-                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
-                        <div class="keterangan">
-                            <div class="icon">
-                                <i class="fas fa-user"></i>
-                            </div>
-                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
-                        </div>
-                    </a>
-
-                    <a href="perArtikel.html" class="perArtikel">
-                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
-                        <div class="keterangan">
-                            <div class="icon">
-                                <i class="fas fa-user"></i>
-                            </div>
-                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
-                        </div>
-                    </a>
-
-                    <a href="perArtikel.html" class="perArtikel">
-                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
-                        <div class="keterangan">
-                            <div class="icon">
-                                <i class="fas fa-user"></i>
-                            </div>
-                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
-                        </div>
-                    </a>
+                <div class="galeri">
+                    <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
+                    <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
                 </div>
             </div>
         </section>
 
-        <section class="galeriHome pt-50 pb-50">
+
+        <section class="artikel pt-50 pb-50">
             <div class="container">
-                <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
-                <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
+                <a href="perArtikel.html" class="perArtikel">
+                    <img src="img/galeri/calendar-works.jpg" alt="img artikel">
+                    <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
+                        maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
+                        voluptatum reiciendis maiores eius itaque?
+                    </p>
+
+                    <div class="cta">
+                        <button class="btn btn-primary">Baca Selengkapnya</button>
+                    </div>
+                </a>
+
+
+                <a href="perArtikel.html" class="perArtikel">
+                    <img src="img/galeri/calendar-works.jpg" alt="img artikel">
+                    <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
+                        Lorem, ipsum dolor.
+                    </p>
+
+                    <div class="cta">
+                        <button class="btn btn-primary">Baca Selengkapnya</button>
+                    </div>
+                </a>
+
+                <a href="perArtikel.html" class="perArtikel">
+                    <img src="img/galeri/calendar-works.jpg" alt="img artikel">
+                    <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
+                        maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
+                        voluptatum reiciendis maiores eius itaque?
+                        Lorem ipsum dolor sit amet.
+                    </p>
+
+                    <div class="cta">
+                        <button class="btn btn-primary">Baca Selengkapnya</button>
+                    </div>
+                </a>
             </div>
         </section>
 
-
-        <!-- 6937FF -->
-
-        <!-- We are Thinkers, Designers, and Team Players. -->
-
-        <!-- Strong team performance is part of our professionalism in covering product needs, creating problem-solving
-        design and completing your project. -->
-
-
-        <!-- The People Ready to Innovate with You
-        We are called experts because we have the skills and knowledge that the possibility of creative discovery is
-        unlimited. -->
-
-
-        <!-- Steve Jobs -->
-        <!-- Design is not just what it looks like and feels like. Design is how it works. -->
-
-
-
-        <!-- Our vision
-        Our vision is to discover rich possibilities of reaching many people through our works, by teaming up with many
-        great clients. -->
-
-        <!-- Our mission is to create designs with excellent aesthetic and functionality based on deep understanding towards
-        the product and product users. -->
-
-
-
-
-
-        <section class="containerFAQ">
+        <section class="containerFAQ pt-50">
             <div class="container">
                 <div class="title">
                     <h1>FAQ</h1>
@@ -342,32 +288,6 @@
                 </div>
             </div>
         </section>
-
-
-        <!-- <section class="search mt-100 pt-50 pb-50">
-            <div class="container">
-                <h1>Ingin belajar apa?</h1>
-                <p>Cari seri yang anda butuhkan saat ini</p>
-
-                <form action="">
-                    <div class="form-group">
-                        <div class="input-group">
-                            <input type="text" placeholder="Cari seri disini">
-                            <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                        </div>
-                    </div>
-                </form>
-
-                <p class="mt-20 searchAlert">Atau jika Anda tidak bisa menemukan apa yang Anda cari ?
-                    <strong>
-                        <a href="">Lihat dari topik.</a>
-                    </strong>
-                </p>
-            </div>
-
-            </div>
-        </section> -->
-
 
         <section class="containerSosmed pt-50 pb-100">
             <div class="container">
