Mengubah header, dan footer

--- a/about.html
+++ b/about.html
@@ -23,7 +23,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="container">
             <a href="index.html" class="logo">
@@ -33,10 +32,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="prestasi.html" class="active">Prestasi</a></li>
-                    <li><a href="galeri.html">Galeri</a></li>
+                    <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="anggota.html">Anggota</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -52,10 +50,9 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prestasi.html" class="active">Prestasi</a></li>
-            <li><a href="galeri.html">Galeri</a></li>
+            <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="anggota.html">Anggota</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
@@ -201,7 +198,7 @@
                     </p>
                 </div>
 
-                <div class="anggota"> 
+                <div class="anggota">
                     <div class="perAnggota">
                         <img src="img/people/img1.jpg" alt="img orang">
                         <h2>Ahmad Nurfawaid</h2>
