--- a/artikel.html
+++ b/artikel.html
@@ -245,7 +245,6 @@
                     </p>
 
                 </div>
-
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
@@ -260,13 +259,13 @@
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="https://github.com/IkkiRama">Github</a>
-                    <a href="https://twitter.com">Twitter</a>
-                    <a href="https://discord.com">Discord</a>
-                    <a href="https://youtube.com">Youtube</a>
-                    <a href="https://telegram.com">Telegram</a>
-                    <a href="https://facebook.com">Facebook</a>
-                    <a href="https://instagram.com">Instagram</a>
+                    <a target="blank" href="https://github.com/IkkiRama">Github</a>
+                    <a target="blank" href="https://twitter.com">Twitter</a>
+                    <a target="blank" href="https://discord.com">Discord</a>
+                    <a target="blank" href="https://youtube.com">Youtube</a>
+                    <a target="blank" href="https://telegram.com">Telegram</a>
+                    <a target="blank" href="https://facebook.com">Facebook</a>
+                    <a target="blank" href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
