--- a/community.html
+++ b/community.html
@@ -25,7 +25,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="container">
             <a href="index.html" class="logo">
@@ -37,7 +36,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html" class="active">Community</a></li>
                 </ul>
             </nav>
 
@@ -55,10 +54,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html" class="active">Community</a></li>
         </ul>
     </nav>
-
 
     <main>
 
