--- a/faq.html
+++ b/faq.html
@@ -36,10 +36,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galeri.html">Galeri</a></li>
+                    <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="anggota.html">Anggota</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -55,10 +54,9 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galeri.html">Galeri</a></li>
+            <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="anggota.html">Anggota</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
