--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 </div>
 
                 <div class="sosmed">
-                    <a href="https://facebook.com" class="perSosmed">
+                    <a href="https://facebook.com" target="blank" class="perSosmed">
                         <div class="icon facebook">
                             <i class="fab fa-facebook"></i>
                         </div>
@@ -313,7 +313,7 @@
                         </div>
                     </a>
 
-                    <a href="https://discord.com" class="perSosmed">
+                    <a href="https://discord.com" target="blank" class="perSosmed">
                         <div class="icon discord">
                             <i class="fab fa-discord"></i>
                         </div>
@@ -327,7 +327,7 @@
                         </div>
                     </a>
 
-                    <a href="https://twitter.com" class="perSosmed">
+                    <a href="https://twitter.com" target="blank" class="perSosmed">
                         <div class="icon twitter">
                             <i class="fab fa-twitter"></i>
                         </div>
@@ -341,7 +341,7 @@
                         </div>
                     </a>
 
-                    <a href="https://youtube.com" class="perSosmed">
+                    <a href="https://youtube.com" target="blank" class="perSosmed">
                         <div class="icon youtube">
                             <i class="fab fa-youtube"></i>
                         </div>
@@ -356,7 +356,7 @@
                     </a>
 
 
-                    <a href="https://instagram.com" class="perSosmed">
+                    <a href="https://instagram.com" target="blank" class="perSosmed">
                         <div class="icon instagram">
                             <i class="fab fa-instagram"></i>
                         </div>
@@ -370,7 +370,7 @@
                         </div>
                     </a>
 
-                    <a href="https://telegram.com" class="perSosmed">
+                    <a href="https://telegram.com" target="blank" class="perSosmed">
                         <div class="icon telegram">
                             <i class="fab fa-telegram"></i>
                         </div>
@@ -432,7 +432,7 @@
                         Indonesia.
                     </p>
                     <p>
-                        HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
+                        HMJ MI part of UTDI is a Trademark of <a target="blank" href="https://github.com/IkkiRama"
                             class="pencipta">Rifki
                             Romadhan</a>. Copyright
                         &copy;2021 ™
@@ -454,13 +454,13 @@
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="https://github.com/IkkiRama">Github</a>
-                    <a href="https://twitter.com">Twitter</a>
-                    <a href="https://discord.com">Discord</a>
-                    <a href="https://youtube.com">Youtube</a>
-                    <a href="https://telegram.com">Telegram</a>
-                    <a href="https://facebook.com">Facebook</a>
-                    <a href="https://instagram.com">Instagram</a>
+                    <a target="blank" href="https://github.com/IkkiRama">Github</a>
+                    <a target="blank" href="https://twitter.com">Twitter</a>
+                    <a target="blank" href="https://discord.com">Discord</a>
+                    <a target="blank" href="https://youtube.com">Youtube</a>
+                    <a target="blank" href="https://telegram.com">Telegram</a>
+                    <a target="blank" href="https://facebook.com">Facebook</a>
+                    <a target="blank" href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
@@ -473,17 +473,6 @@
             <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
-
-
-    <!-- <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer"></div>
-        </div>
-    </div> -->
 
 </body>
 
