--- a/detailEvent.html
+++ b/detailEvent.html
@@ -35,7 +35,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="event.html" class="active">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -53,7 +53,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="event.html" class="active">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
