--- a/event.html
+++ b/event.html
@@ -39,7 +39,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="event.html" class="active">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -57,10 +57,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="event.html" class="active">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
-
 
     <main>
 
@@ -85,7 +84,7 @@
             </div>
         </section>
 
- 
+
 
         <section class="containerAlesan pt-100 pb-100">
             <div class="container">
@@ -138,8 +137,8 @@
                             <i class="fas fa-angle-down"></i>
 
                             <div class="isiBoxUrutkan">
-                                <span class="active">Terbaru</span>
-                                <span>Terpopuler</span>
+                                <span>Terbaru</span>
+                                <span class="active">Terpopuler</span>
                                 <span>Nama A-Z</span>
                                 <span>Nama Z-A</span>
                             </div>
