--- a/fasilitas.html
+++ b/fasilitas.html
@@ -33,10 +33,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galery.html">Galery</a></li>
+                    <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -52,10 +51,9 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galery.html">Galery</a></li>
+            <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
