--- a/galeri.html
+++ b/galeri.html
@@ -32,10 +32,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galery.html" class="active">Galery</a></li>
+                    <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -51,10 +50,9 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galery.html" class="active">Galery</a></li>
+            <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
