--- a/visiMisi.html
+++ b/visiMisi.html
@@ -33,10 +33,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galery.html">Galery</a></li>
+                    <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -52,10 +51,9 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galery.html">Galery</a></li>
+            <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
@@ -160,14 +158,13 @@
                     </p>
 
                 </div>
-
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="about.html">About</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
-                    <a href="community.html">Community</a>
                     <a href="PrivacyPolicy.html">Privacy Policy</a>
                     <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
@@ -175,13 +172,13 @@
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="https://github.com/IkkiRama">Github</a>
-                    <a href="https://twitter.com">Twitter</a>
-                    <a href="https://discord.com">Discord</a>
-                    <a href="https://youtube.com">Youtube</a>
-                    <a href="https://telegram.com">Telegram</a>
-                    <a href="https://facebook.com">Facebook</a>
-                    <a href="https://instagram.com">Instagram</a>
+                    <a target="blank" href="https://github.com/IkkiRama">Github</a>
+                    <a target="blank" href="https://twitter.com">Twitter</a>
+                    <a target="blank" href="https://discord.com">Discord</a>
+                    <a target="blank" href="https://youtube.com">Youtube</a>
+                    <a target="blank" href="https://telegram.com">Telegram</a>
+                    <a target="blank" href="https://facebook.com">Facebook</a>
+                    <a target="blank" href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
