Mengubah header, dan footer

--- a/contact.html
+++ b/contact.html
@@ -149,14 +149,13 @@
                     </p>
 
                 </div>
-
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="about.html">About</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
-                    <a href="community.html">Community</a>
                     <a href="PrivacyPolicy.html">Privacy Policy</a>
                     <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
@@ -164,13 +163,13 @@
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="https://github.com/IkkiRama">Github</a>
-                    <a href="https://twitter.com">Twitter</a>
-                    <a href="https://discord.com">Discord</a>
-                    <a href="https://youtube.com">Youtube</a>
-                    <a href="https://telegram.com">Telegram</a>
-                    <a href="https://facebook.com">Facebook</a>
-                    <a href="https://instagram.com">Instagram</a>
+                    <a target="blank" href="https://github.com/IkkiRama">Github</a>
+                    <a target="blank" href="https://twitter.com">Twitter</a>
+                    <a target="blank" href="https://discord.com">Discord</a>
+                    <a target="blank" href="https://youtube.com">Youtube</a>
+                    <a target="blank" href="https://telegram.com">Telegram</a>
+                    <a target="blank" href="https://facebook.com">Facebook</a>
+                    <a target="blank" href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
