--- a/about.html
+++ b/about.html
@@ -334,10 +334,10 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="about.html">About</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
-                    <a href="community.html">Community</a>
                     <a href="PrivacyPolicy.html">Privacy Policy</a>
                     <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
@@ -345,14 +345,15 @@
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="https://github.com/IkkiRama">Github</a>
-                    <a href="https://twitter.com">Twitter</a>
-                    <a href="https://discord.com">Discord</a>
-                    <a href="https://youtube.com">Youtube</a>
-                    <a href="https://telegram.com">Telegram</a>
-                    <a href="https://facebook.com">Facebook</a>
-                    <a href="https://instagram.com">Instagram</a>
+                    <a target="blank" href="https://github.com/IkkiRama">Github</a>
+                    <a target="blank" href="https://twitter.com">Twitter</a>
+                    <a target="blank" href="https://discord.com">Discord</a>
+                    <a target="blank" href="https://youtube.com">Youtube</a>
+                    <a target="blank" href="https://telegram.com">Telegram</a>
+                    <a target="blank" href="https://facebook.com">Facebook</a>
+                    <a target="blank" href="https://instagram.com">Instagram</a>
                 </div>
+
 
             </div>
         </section>
@@ -365,16 +366,6 @@
         </div>
     </footer>
 
-
-    <!-- <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer"></div>
-        </div>
-    </div> -->
 
 </body>
 
