Meresponsivekan halaman event

--- a/event.html
+++ b/event.html
@@ -247,13 +247,17 @@
                     <div class="sorting">
 
                         <div class="filter">
-                            <i class="fas fa-filter"></i>
+                            <div class="icon">
+                                <i class="fas fa-filter"></i>
+                            </div>
                             <h2>Filter</h2>
                         </div>
 
                         <div class="urutkan">
                             <h2>Terbaru</h2>
-                            <i class="fas fa-angle-down"></i>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
 
                             <div class="isiBoxUrutkan">
                                 <div class="perIsiBoxUrutkan active">
@@ -600,6 +604,94 @@
             <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
+
+    <script>
+        //js Box Urutkan pada layar komputer
+        let urutkan = document.querySelectorAll(".urutkan")
+        let isiBoxUrutkan = document.querySelectorAll(".isiBoxUrutkan")
+
+        urutkan.forEach((u) => {
+            u.addEventListener("click", () => {
+                isiBoxUrutkan.forEach((isi) => {
+                    isi.classList.toggle("showIsiBoxUrutkan")
+                })
+            })
+        })
+
+
+        //js untuk menampilkan window filter program pada layar komputer
+        let keterangan = document.querySelectorAll(".keterangan")
+        keterangan.forEach((k) => {
+            k.addEventListener("click", () => {
+                k.nextElementSibling.classList.toggle("hideIsiFilterProgram")
+            })
+        })
+
+
+
+        //js filter program pada layar hp
+        let tombol = document.querySelector(".tombol")
+        tombol.addEventListener("click", () => {
+            tombol.nextElementSibling.style.display = "flex"
+        })
+
+
+
+        //js untuk close window filter program pada layar komputer
+        let closeWindow = document.querySelector(".close")
+        closeWindow.addEventListener("click", () => {
+            closeWindow.parentElement.parentElement.parentElement.style.display = "none"
+        })
+
+
+
+
+        //js Box Urutkan pada layar hp
+        let title = document.querySelectorAll(".perFilter .title")
+        title.forEach((t) => {
+            t.addEventListener("click", () => {
+                t.nextElementSibling.classList.toggle("show")
+            })
+        })
+
+
+
+
+        // untuk berpindah halaman antara event yang masih ada dan sudah berlalu
+        let indikatorSudahBerakhir = document.querySelectorAll(".indikatorSudahBerakhir")
+        let indikatorMasihBerlangsung = document.querySelectorAll(".indikatorMasihBerlangsung")
+
+        //console.log(indikatorSudahBerakhir)
+        //console.log(indikatorMasihBerlangsung)
+
+        let sudahBerakhir = document.querySelectorAll(".sudahBerakhir")
+        let masihBerlangsung = document.querySelectorAll(".masihBerlangsung")
+
+        indikatorSudahBerakhir.forEach((ISB) => {
+
+            ISB.addEventListener("click", () => {
+                masihBerlangsung.forEach((MB) => {
+                    MB.style.display = "none"
+                })
+                sudahBerakhir.forEach((SB) => {
+                    SB.style.display = "flex"
+                })
+            })
+        })
+
+
+        indikatorMasihBerlangsung.forEach((IMB) => {
+            IMB.addEventListener("click", () => {
+                masihBerlangsung.forEach((MB) => {
+                    MB.style.display = "flex"
+                })
+
+                sudahBerakhir.forEach((SB) => {
+                    SB.style.display = "none"
+                })
+            })
+        })
+    </script>
 
 
     <!-- <div class="modalContainer">
