Mengupdate footer dan Membuat halaman PerArtikel

--- a/community.html
+++ b/community.html
@@ -63,7 +63,7 @@
         <section class="comunity pt-15-vh mb-100">
             <div class="container">
 
-                <a href="" class="perComunity facebook">
+                <a href="https://facebook.com" target="blank" class="perComunity facebook">
 
                     <div class="icon">
                         <i class="fab fa-facebook"></i>
@@ -78,7 +78,7 @@
                     </div>
                 </a>
 
-                <a href="" class="perComunity discord">
+                <a href="https://discord.com" target="blank" class="perComunity discord">
                     <div class="icon">
                         <i class="fab fa-discord"></i>
                     </div>
@@ -92,7 +92,7 @@
                     </div>
                 </a>
 
-                <a href="" class="perComunity twitter">
+                <a href="https://twitter.com" target="blank" class="perComunity twitter">
                     <div class="icon">
                         <i class="fab fa-twitter"></i>
                     </div>
@@ -106,7 +106,7 @@
                     </div>
                 </a>
 
-                <a href="" class="perComunity youtube">
+                <a href="https://youtube.com" target="blank" class="perComunity youtube">
                     <div class="icon">
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -121,7 +121,7 @@
                 </a>
 
 
-                <a href="" class="perComunity instagram">
+                <a href="https://instagram.com" target="blank" class="perComunity instagram">
                     <div class="icon">
                         <i class="fab fa-instagram"></i>
                     </div>
@@ -135,7 +135,7 @@
                     </div>
                 </a>
 
-                <a href="" class="perComunity telegram">
+                <a href="https://telegram.com" target="blank" class="perComunity telegram">
                     <div class="icon">
                         <i class="fab fa-telegram"></i>
                     </div>
@@ -200,7 +200,7 @@
                         HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
                             class="pencipta">Rifki
                             Romadhan</a>. Copyright
-                        &copy;2021 ™
+                        &copy;2022 ™
                     </p>
 
                 </div>
