Meresponsivekan halaman PerArtikel

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img src="img/hero-img.png" alt="img hero">
+                    <img src="img/3d/Saly-10.svg" alt="img hero">
                 </div>
             </div>
         </section>
