--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
                     <h2>Cara Membuat Auth Login Dengan Laravel</h2>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
-                        Lorem, ipsum dolor.
-                    </p>
+                        maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
+                        voluptatum reiciendis maiores eius itaque?
+                    </p> 
 
                     <div class="cta">
                         <button class="btn btn-primary">Baca Selengkapnya</button>
