--- a/perArtikel.html
+++ b/perArtikel.html
@@ -184,7 +184,63 @@
                         praesentium. Voluptate corporis, porro culpa possimus esse numquam dolores, recusand
                     </p>
                 </div>
+            </div>
 
+        </article>
+
+
+
+        <section class="artikel pt-50 pb-50">
+            <div class="container">
+                <a href="perArtikel.html" class="perArtikel">
+                    <img src="img/galeri/calendar-works.jpg" alt="img artikel">
+                    <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
+                        maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
+                        voluptatum reiciendis maiores eius itaque?
+                    </p>
+
+                    <div class="cta">
+                        <button class="btn btn-primary">Baca Selengkapnya</button>
+                    </div>
+                </a>
+
+
+                <a href="perArtikel.html" class="perArtikel">
+                    <img src="img/galeri/calendar-works.jpg" alt="img artikel">
+                    <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
+                        maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
+                        voluptatum reiciendis maiores eius itaque?
+                    </p>
+
+                    <div class="cta">
+                        <button class="btn btn-primary">Baca Selengkapnya</button>
+                    </div>
+                </a>
+
+                <a href="perArtikel.html" class="perArtikel">
+                    <img src="img/galeri/calendar-works.jpg" alt="img artikel">
+                    <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis nesciunt id hic eveniet
+                        maxime ratione pariatur delectus suscipit, omnis repellendus eligendi cum optio ut quibusdam
+                        voluptatum reiciendis maiores eius itaque?
+                        Lorem ipsum dolor sit amet.
+                    </p>
+
+                    <div class="cta">
+                        <button class="btn btn-primary">Baca Selengkapnya</button>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+
+        <article class="contentArtikel pb-100">
+            <div class="container">
                 <form action="" class="pt-50">
                     <div class="form-group">
                         <label for="komentar">
@@ -297,7 +353,6 @@
 
                 </div>
             </div>
-
         </article>
 
 
@@ -315,6 +370,7 @@
                 </div>
             </div>
         </section>
+
 
 
 
@@ -385,17 +441,6 @@
             <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
-
-
-    <!-- <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer"></div>
-        </div>
-    </div> -->
 
 </body>
 
